--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
-<title>Happy 的个人主页（优化完整版）</title>
+<title>Happy 的个人主页</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 <!-- FontAwesome 4 for Valine icons (Valine 使用旧版图标) -->
@@ -145,7 +145,7 @@ body.dark #vcomments .vcontainer .vinput input, body.dark #vcomments .vcontainer
   <h2>关于我</h2>
   <div class="card show">
     <p>Hi 我是 Happy，我来自河南郑州市，目前是郑州市西亚斯大一学生。在此我想分享我的生活</p>
-    <div class="tags"><span class="tag">游戏</span><span class="tag">前端爱好</span><span class="tag">日常记录</span></div>
+    <div class="tags"><span class="tag">游戏</span><span class="tag">日常记录</span></div>
   </div>
 </section>
 
@@ -435,3 +435,4 @@ new Valine({
 
 </body>
 </html>
+
